--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -517,6 +517,15 @@ ${\rm gauss}(x)=\frac{{\rm area} exp(-(x-{\rm position})^2/2 \sigma^2)}{\sqrt{2*
              sta=sum_k (y_k-sum_i a_i*x_ik)^2
            - file: new column col+n+1 contining sum_i a_i*x_ik
 \end{verbatim}
+\item[\prg getvalue\index{getvalue} colx coly xvalue dE filename]
+program to get the y-value of a function by averaging
+ over an interval xvalue+-dE,
+ note: colx has to be sorted
+\begin{verbatim}
+ output: the y-value is written to stdout and environment variable MCPHASE_YVALUE
+         1/y-value is written to stdout MCPHASE_YVALUE_INVERSE
+         standarddeviation to stdaout and MCPHASE_STA
+\end{verbatim}
 \item [\prg lorentzcol\index{lorentzcol} col position fwhm area:] calculate a lorentzian from
 a column with x values, the formula for a Lorentz curve is: 
 ${\rm lorentz}(x)=\frac{1.0}{\pi{\rm fwhm}(1.0+(x-{\rm position})^2/fwhm^2)}$
