--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -510,7 +510,14 @@ program to get the y-value of a function by averaging
          1/y-value is written to stdout MCPHASE_YVALUE_INVERSE
          standarddeviation to stdaout and MCPHASE_STA
 \end{verbatim}
-
+\item[\prg int\index{int} {[-m] }colx coly file(s):]
+ program  to integrate columnx vs columny=f(x), integration is done 
+point by point, the result goes to the data file, the total integral 
+INT=$\int f(x)dx$ is printed to stdout and set to the 
+ environment variable MCPHASE\_INT.
+ option -m: n-th moments\index{moments of a distribution} are calculated according to $\mu_1=\int x f(x)dx$/INT, $\mu_n=\int (x-\mu_1)^n f(x)dx$/INT.
+The results go to stdout and environment variables MCPHASE\_INT\_MU\_1,
+  MCPHASE\_INT\_MU\_2,MCPHASE\_INT\_MU\_3 ... are set.
 \item [\prg linreg\index{linreg} col n file:] calculates linear regression of n columns in file
 \begin{verbatim}
           col     ...... column containing y_k values followed by
