--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -75,11 +75,15 @@ community this program would not have come into existence.
 - program display redesigned to be able to handle error bars and 
   different symbol size
 
-- program anisotropy added to be able to calculate anisotropy loops
+- program {\prg anisotropy} added to be able to calculate anisotropy loops
   for single ion property files
 
 - many column manipulation programs extended to be able to manipulate
   error columns containing errorbars for experimental data
+
+- program {\prg script2html} allows to create html documentation from
+  several scripts. This makes documentation of calculations easier
+  (see tutorial)
 
 \subsection*{... in version 4.6...}
 
